[gd_scene load_steps=10 format=2]

[ext_resource path="res://Planet/background.png" type="Texture" id=1]
[ext_resource path="res://Planet/PlanetRotationNode.gd" type="Script" id=2]
[ext_resource path="res://fonts/ARIAL.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Planet/base.png" type="Texture" id=4]
[ext_resource path="res://Planet/station.png" type="Texture" id=5]
[ext_resource path="res://Planet/Planet.gd" type="Script" id=6]
[ext_resource path="res://resources_bar/resources_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Planet/building_spot/building_spot.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Planet" type="Control"]
margin_left = -1152.0
margin_top = -1152.0
margin_right = 1152.0
margin_bottom = 1152.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetRotationNode" type="Node2D" parent="."]
position = Vector2( 1152, 1152 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="PlanetRotationNode"]
scale = Vector2( 4.4, 4.4 )
texture = ExtResource( 1 )

[node name="Base" type="Control" parent="PlanetRotationNode"]
margin_left = -256.0
margin_top = -896.0
margin_right = 256.0
margin_bottom = -640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseTexture" type="TextureRect" parent="PlanetRotationNode/Base"]
margin_right = 512.0
margin_bottom = 256.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="PlanetRotationNode/Base"]
margin_left = 16.0
margin_top = 144.0
margin_right = 240.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineStation" type="Control" parent="PlanetRotationNode"]
margin_left = -896.0
margin_top = 128.0
margin_right = -640.0
margin_bottom = 384.0
rect_rotation = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineTexture" type="TextureRect" parent="PlanetRotationNode/MineStation"]
margin_top = -3.05176e-05
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineButton" type="Button" parent="PlanetRotationNode/MineStation"]
margin_right = 256.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "Mine Station"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleStation" type="Control" parent="PlanetRotationNode"]
margin_left = 896.0
margin_top = -128.0
margin_right = 1152.0
margin_bottom = 128.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleTexture" type="TextureRect" parent="PlanetRotationNode/BattleStation"]
margin_top = -3.05176e-05
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleButton" type="Button" parent="PlanetRotationNode/BattleStation"]
margin_right = 256.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "Battle Station"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRStation" type="Control" parent="PlanetRotationNode"]
margin_left = 128.0
margin_top = 896.0
margin_right = 384.0
margin_bottom = 1152.0
rect_rotation = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRTexture" type="TextureRect" parent="PlanetRotationNode/TRStation"]
margin_top = -3.05176e-05
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRButton" type="Button" parent="PlanetRotationNode/TRStation"]
margin_top = 6.10352e-05
margin_right = 256.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "TR Station"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingSpots" type="Node2D" parent="PlanetRotationNode"]

[node name="BuildingSpot1" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -224.0
margin_top = -1072.0
margin_right = -64.0
margin_bottom = -912.0

[node name="BuildingSpot2" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -432.0
margin_top = -848.0
margin_right = -272.0
margin_bottom = -688.0

[node name="BuildingSpot3" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 64.0
margin_top = -1072.0
margin_right = 224.0
margin_bottom = -912.0

[node name="BuildingSpot4" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -224.0
margin_top = -624.0
margin_right = -64.0
margin_bottom = -464.0

[node name="BuildingSpot5" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 272.0
margin_top = -848.0
margin_right = 432.0
margin_bottom = -688.0

[node name="BuildingSpot6" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 64.0
margin_top = -624.0
margin_right = 224.0
margin_bottom = -464.0

[node name="BuildingSpot7" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 848.0
margin_top = -304.0
margin_right = 1008.0
margin_bottom = -144.0
rect_rotation = 90.0

[node name="BuildingSpot8" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 1072.0
margin_top = -80.0
margin_right = 1232.0
margin_bottom = 80.0
rect_rotation = 90.0

[node name="BuildingSpot9" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 848.0
margin_top = 144.0
margin_right = 1008.0
margin_bottom = 304.0
rect_rotation = 90.0

[node name="BuildingSpot10" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 624.0
margin_top = -80.0
margin_right = 784.0
margin_bottom = 80.0
rect_rotation = 90.0

[node name="BuildingSpot11" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 304.0
margin_top = 848.0
margin_right = 464.0
margin_bottom = 1008.0
rect_rotation = 180.0

[node name="BuildingSpot12" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 80.0
margin_top = 1072.0
margin_right = 240.0
margin_bottom = 1232.0
rect_rotation = 180.0

[node name="BuildingSpot13" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -144.0
margin_top = 848.0
margin_right = 16.0
margin_bottom = 1008.0
rect_rotation = 180.0

[node name="BuildingSpot14" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = 80.0
margin_top = 624.0
margin_right = 240.0
margin_bottom = 784.0
rect_rotation = 180.0

[node name="BuildingSpot15" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -848.0
margin_top = 304.0
margin_right = -688.0
margin_bottom = 464.0
rect_rotation = -90.0

[node name="BuildingSpot16" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -624.0
margin_top = 80.0
margin_right = -464.0
margin_bottom = 240.0
rect_rotation = -90.0

[node name="BuildingSpot17" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -1072.0
margin_top = 80.0
margin_right = -912.0
margin_bottom = 240.0
rect_rotation = -90.0

[node name="BuildingSpot18" parent="PlanetRotationNode/BuildingSpots" instance=ExtResource( 8 )]
margin_left = -848.0
margin_top = -144.0
margin_right = -688.0
margin_bottom = 16.0
rect_rotation = -90.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1152, 384 )
current = true

[node name="LeftRotateButton" type="Button" parent="."]
anchor_left = 0.292
anchor_top = 0.139
anchor_right = 0.292
anchor_bottom = 0.139
margin_left = -144.768
margin_top = -16.256
margin_right = -80.7681
margin_bottom = 143.744
text = "L"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightRotateButton" type="Button" parent="."]
anchor_left = 0.292
anchor_top = 0.139
anchor_right = 0.292
anchor_bottom = 0.139
margin_left = 1039.23
margin_top = -16.256
margin_right = 1103.23
margin_bottom = 143.744
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesBar" parent="." instance=ExtResource( 7 )]
margin_left = 464.0
margin_right = 1872.0

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 1656.0
margin_top = 8.0
margin_right = 1832.0
margin_bottom = 56.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="PlanetRotationNode/Base/ShopButton" to="." method="_on_ShopButton_button_down"]
[connection signal="button_down" from="PlanetRotationNode/MineStation/MineButton" to="." method="_on_MineButton_button_down"]
[connection signal="button_down" from="PlanetRotationNode/BattleStation/BattleButton" to="." method="_on_BattleButton_button_down"]
[connection signal="button_down" from="PlanetRotationNode/TRStation/TRButton" to="." method="_on_TRButton_button_down"]
[connection signal="button_up" from="LeftRotateButton" to="." method="_on_LeftRotateButton_button_up"]
[connection signal="button_up" from="RightRotateButton" to="." method="_on_RightRotateButton_button_up"]
[connection signal="button_up" from="MainMenuButton" to="." method="_on_MainMenuButton_button_up"]
